Add multiple mode selecter options

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 
   <body>
     <div class="container">
+      <div class="">
       <button type="click" id="roll">Roll Dice</button>
       <button type="click" id="hold">Hold Dice</button>
+      <button type="click" id="reset">Reset</button>
+      <input type="radio" name="selectMode" id="game1" checked> Player vs Player</input>
+      <input type="radio" name="selectMode" id="game2"> Player vs CPU (Easy)</input>
+      <input type="radio" name="selectMode" id="game3"> Player vs CPU (Hard)</input>
 
         <div id="dice1">
         </div>
