added styles colors

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
   <body>
     <div class="container">
+      <div class="jumbotron">
+        <h1><img src="img/die1.png">PIG DIE!<img src="img/die1.png"></hi>
+      </div>
       <div class="row">
         <div class="col-md-3" id="diebox">
           <div id="dice1">
@@ -42,13 +45,13 @@
       <div class="row">
         <div class="col-md-6">
           <button type="click" id="roll">Roll Dice</button>
-          <h4>Player 1</h4>
+          <h2>Player 1</h2>
           <div id="total">
           </div>
         </div>
         <div class="col-md-4">
           <button type="click" id="hold">Hold Dice</button>
-          <h4>Player 2</h4>
+          <h2>Player 2</h2>
           <div id="total2">
           </div>
         </div>
